test/type-error-3.ktn
// TODO(strager): Improve error location reporting.

def baq ([Char] [Char] -> Char):
  ->q q 0 __get __from_some
  ->{x y} x
